tests/error/match_errors/unsupported_pattern4.err
Error: Unsupported (at $FILE:13:13)
   | 
11 | def main(x: int, a: int) -> None:
12 |     match x:
13 |         case Enum.North() | Enum.South():
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ This pattern is not supported

Guppy compilation failed due to 1 previous error
